--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/lab": "5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
+    "cross-fetch": "^4.0.0",
     "next": "14.2.5",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "4.5.0",
     "react-json-tree": "^0.19.0",
