--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "@mui/lab": "5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
     "cross-fetch": "^4.0.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.5",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-hotkeys-hook": "4.5.0",
     "react-json-tree": "^0.19.0",
     "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "@types/leaflet": "1.9.12",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.18",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
