--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.6",
-    "@mui/lab": "5.0.0-alpha.173",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
     "cross-fetch": "^4.0.0",
     "leaflet": "^1.9.4",
@@ -23,9 +23,9 @@
     "react": "^18.2.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
-    "react-leaflet": "^4.2.1",
     "react-hotkeys-hook": "4.5.0",
     "react-json-tree": "^0.19.0",
+    "react-leaflet": "^4.2.1",
     "swr": "^2.2.5"
   },
   "devDependencies": {
