--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/icons-material": "^5.16.6",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.6",
+    "@types/next-pwa": "^5.6.9",
     "cross-fetch": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "14.2.5",
+    "next-pwa": "^5.6.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-cookie": "^7.2.0",
