--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-cookie": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-hotkeys-hook": "4.5.0",
+    "react-intl": "^6.6.8",
     "react-json-tree": "^0.19.0",
     "react-leaflet": "^4.2.1",
     "swr": "^2.2.5"
